# ZipBox

./: CMakeLists.txt  LICENSE  LICENSE_LGPLv2.1  README.md
extensions/: README
extensions/chacha20/: CMakeLists.txt
extensions/chacha20/include/winzox/extensions/chacha20/: chacha20_api.h
extensions/chacha20/src/: chacha20.cpp
src/app/: main.cpp
src/archive/: archive.cpp  archive.hpp  archive_integrity.cpp  archive_integrity.hpp
src/compression/: compressor.cpp  compressor.hpp
src/compression/coder/: bit_reader.hpp  bit_writer.hpp  coder_interfaces.hpp  huffman.cpp  huffman.hpp  range_coder.cpp  range_coder.hpp
src/compression/dictionary/: dictionary_manager.cpp  dictionary_manager.hpp
src/crypto/: aes256.cpp  aes256.hpp  aes_provider.cpp  aes_provider.hpp  encryption_provider.hpp  gorgon.cpp  gorgon.hpp  gorgon_api.cpp  gorgon_api.h  gorgon_provider.cpp  gorgon_provider.hpp  key_derivation.cpp  key_derivation.hpp
src/crypto/algorithms/aes/: aes256.cpp
src/crypto/algorithms/gorgon/: gorgon.hpp  gorgon_api.h
src/crypto/algorithms/provider/: aes_provider.hpp  gorgon_provider.cpp
src/crypto/auth/: archive_authentication.cpp  archive_authentication.hpp
src/crypto/gorgon/: gorgon_api.cpp  gorgon_provider.hpp
src/extraction/api/unzox/: unzox_api.cpp  unzox_api.hpp
src/io/: file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  volume_reader.cpp  volume_reader.hpp  volume_writer.cpp  volume_writer.hpp
src/shell/: windows_shell.cpp  windows_shell.hpp  windows_shell_add_dialog.cpp  windows_shell_browse_dialog.cpp  windows_shell_internal.hpp
